--- a/JQ-scroll.html
+++ b/JQ-scroll.html
@@ -61,9 +61,10 @@
         }
 
     </style>
-    <script src="jquery-3.2.1.min.js"></script>
-    
-    
+
+    <script src="https://cdn.bootcss.com/jquery/1.10.2/jquery.min.js">
+    </script>
+
     <script type="text/javascript" >
         $(function() {
             let page = 1
